--- a/app/assets/stylesheets/incident_types.scss
+++ b/app/assets/stylesheets/incident_types.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the IndicidentTypes controller here.
+// Place all the styles related to the IncidentTypes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
