Add navbar style and main files, also fix font-awesome import

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "bootstrap/scss/bootstrap";
-@import "font-awesome";
-
+@import "font-awesome/scss/font-awesome";
+@import "main";
+@import "navbar";
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
