Incident Type Form

--- a/app/views/incident_types/edit.html.erb
+++ b/app/views/incident_types/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing Incident Type</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @incident_type %> |
-<%= link_to 'Back', incident_types_path %>
+<div class="container spaced">
+  <div class="row col-xs-12">
+    <div class="pull-xs-left">
+      <%= link_to 'Back', incident_types_path %>
+    </div>
+    <div class="pull-xs-right">
+      <%= link_to 'Show', @incident_type %>
+    </div>
+  </div>
+  <div class="row col-xs-12">
+  <h1 class="text-xs-center">Editing Incident Type</h1>
+  </div>
+  <%= render 'form' %>
+</div>
