--- a/app/views/incident_types/_form.html.erb
+++ b/app/views/incident_types/_form.html.erb
@@ -1,21 +1,25 @@
-<%= form_for(@incident_type) do |f| %>
-  <% if @incident_type.errors.any? %>
+<div class="row">
+  <div class="col-xs-12 col-md-4 col-md-offset-4">
+    <%= form_for(@incident_type) do |f| %>
+    <% if @incident_type.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@incident_type.errors.count, "error") %> prohibited this incident_type from being saved:</h2>
-
       <ul>
-      <% @incident_type.errors.full_messages.each do |message| %>
+        <% @incident_type.errors.full_messages.each do |message| %>
         <li><%= message %></li>
-      <% end %>
+        <% end %>
       </ul>
     </div>
-  <% end %>
+    <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <div class="form-group">
+      <%= f.label :name %><br>
+      <%= f.text_field :name, class: 'form-control' %>
+    </div>
+    <div class="form-group">
+      <%= f.submit 'Save', class: ['btn', 'btn-success'] %>
+    </div>
+    <% end %>
+
   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
