--- a/app/views/incident_types/new.html.erb
+++ b/app/views/incident_types/new.html.erb
@@ -1,5 +1,14 @@
-<h1>New Incident Type</h1>
+<div class="container spaced">
+  <div class="row col-xs-12">
+    <div class="pull-xs-left">
+      <%= link_to 'Back', incident_types_path %>
+    </div>
+    <div class="pull-xs-right">
 
-<%= render 'form' %>
-
-<%= link_to 'Back', incident_types_path %>
+    </div>
+  </div>
+  <div class="row col-xs-12">
+  <h1 class="text-xs-center">New Incident Type</h1>
+  </div>
+  <%= render 'form' %>
+</div>
