--- a/app/views/incident_types/index.html.erb
+++ b/app/views/incident_types/index.html.erb
@@ -1,27 +1,43 @@
-<p id="notice"><%= notice %></p>
+<div class="container spaced">
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="pull-xs-right">
+        <%= link_to 'New Incident type', new_incident_type_path %>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <%= render 'layouts/notice', notice: notice %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <h1 class="text-xs-center">Listing Incident Types</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
 
-<h1>Listing Incident Types</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @incident_types.each do |incident_type| %>
-      <tr>
-        <td><%= incident_type.name %></td>
-        <td><%= link_to 'Show', incident_type %></td>
-        <td><%= link_to 'Edit', edit_incident_type_path(incident_type) %></td>
-        <td><%= link_to 'Destroy', incident_type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Incident type', new_incident_type_path %>
+        <tbody>
+          <% @incident_types.each do |incident_type| %>
+          <tr>
+            <td><%= incident_type.name %></td>
+            <td><%= link_to 'Show', incident_type %></td>
+            <td><%= link_to 'Edit', edit_incident_type_path(incident_type) %></td>
+            <td><%= link_to 'Destroy', incident_type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
