--- a/app/views/incident_types/show.html.erb
+++ b/app/views/incident_types/show.html.erb
@@ -1,9 +1,50 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @incident_type.name %>
-</p>
-
-<%= link_to 'Edit', edit_incident_type_path(@incident_type) %> |
-<%= link_to 'Back', incident_types_path %>
+<div class="container spaced">
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="pull-xs-left">
+        <%= link_to 'Back', incident_types_path %>
+      </div>
+      <div class="pull-xs-right">
+        <%= link_to 'Edit', edit_incident_type_path(@incident_type) %>
+      </div>
+    </div>
+  </div>
+  <div class="row col-xs-12">
+    <%= render 'layouts/notice', notice: notice %>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <h1 class="text-xs-center">Incidents of <%= @incident_type.name %></h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>When</th>
+            <th>Action Taken</th>
+            <th>Location</th>
+            <th>Open ?</th>
+            <th>Reporter</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+            <% @incident_type.incidents.each do |incident| %>
+            <tr>
+              <td>incident.created_at</td>
+              <td>incident.action_taken</td>
+              <td>incident.location</td>
+              <td>incident.open</td>
+              <td>incident.user.name</td>
+              <td><%= link_to 'Show', incident %></td>
+              <td><%= link_to 'Edit', edit_incident_path(incident) %></td>
+              <td><%= link_to 'Destroy', incident, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+            <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
