--- a/app/views/incident_types/new.html.erb
+++ b/app/views/incident_types/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container spaced">
   <div class="row col-xs-12">
     <div class="pull-xs-left">
-      <%= link_to 'Back', incident_types_path %>
+      <%= link_to icon('chevron-left', 'Back', class: 'fa-fw'), incident_types_path %>
     </div>
     <div class="pull-xs-right">
 
