--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "bootstrap";
-@import "font-awesome/scss/font-awesome";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 @import "core/progress-bar";
 @import "core/main";
 @import "core/navbar";
