Add space helper css classes

--- a/app/assets/stylesheets/core/main.scss
+++ b/app/assets/stylesheets/core/main.scss
@@ -7,3 +7,12 @@ body {
 .spaced {
   margin-top: 2rem;
 }
+
+.small-space {
+  margin-top: 1rem;
+}
+
+.small-both-spaced {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
