--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -1,37 +1,60 @@
-<p id="notice"><%= notice %></p>
+<div class="container spaced">
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="pull-xs-right">
+        <%= link_to icon('plus', 'New Incident', class: 'fa-fw'), new_incident_path %>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+        <%= render 'layouts/notice', notice: notice %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <h1 class="text-xs-center">Listing Incidents</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <% if @incidents.empty? %>
+      <p class="lead text-muted text-xs-center">No incidents yet reported.</p>
+      <% else %>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Type</th>
+            <th>Action Taken</th>
+            <th>Location</th>
+            <th>User</th>
+            <th>Description</th>
+            <th>Open ?</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
 
-<h1>Listing Incidents</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Incident type</th>
-      <th>Action taken</th>
-      <th>Location</th>
-      <th>User</th>
-      <th>Description</th>
-      <th>Open</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @incidents.each do |incident| %>
-      <tr>
-        <td><%= incident.incident_type %></td>
-        <td><%= incident.action_taken %></td>
-        <td><%= incident.location %></td>
-        <td><%= incident.user %></td>
-        <td><%= incident.description %></td>
-        <td><%= incident.open %></td>
-        <td><%= link_to 'Show', incident %></td>
-        <td><%= link_to 'Edit', edit_incident_path(incident) %></td>
-        <td><%= link_to 'Destroy', incident, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Incident', new_incident_path %>
+        <tbody>
+          <% @incidents.each do |incident| %>
+          <tr>
+            <td><%= incident.incident_type.name %></td>
+            <td><%= incident.action_taken %></td>
+            <td><%= incident.location %></td>
+            <td><%= incident.user %></td>
+            <td>
+              <% if incident.open %>
+              <%= icon('check', 'text-success') %>
+              <% else %>
+              <% icon('times', 'text-danger') %>
+              <% end %></td>
+              <td><%= link_to icon('eye'), incident %></td>
+              <td><%= link_to icon('pencil'), edit_incident_path(incident) %></td>
+              <td><%= link_to icon('times'), incident, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      <% end %>
+    </div>
+  </div>
+</div>
