--- a/app/views/incidents/_form.html.erb
+++ b/app/views/incidents/_form.html.erb
@@ -15,7 +15,7 @@
 
     <div class="form-group">
       <%= f.label :incident_type_id, class: 'control-label' %>
-      <%=f.collection_select :incident_type_id, @types, :id, :name, {}, {class: "form-control"} %>
+      <%=f.collection_select :incident_type_id, IncidentType.all, :id, :name, {}, {class: "form-control"} %>
     </div>
     <div class="form-group">
       <%= f.label :action_taken, class: 'control-label' %>
@@ -23,7 +23,15 @@
     </div>
     <div class="form-group">
       <%= f.label :location, class: 'control-label' %>
-      <%= f.text_field :location, class: 'form-control' %>
+      <div class="row">
+        <div class="col-xs-12 col-md-6">
+          <%= text_field_tag :latitude, @incident.location ? @incident.location.latitude : "", class: 'form-control', placeholder: 'Latitude' %>
+        </div>
+        <div class="col-xs-12 col-md-6">
+          <%= text_field_tag :longitude, @incident.location ? @incident.location.longitude : "" ,class: 'form-control', placeholder: 'Longitude' %>
+        </div>
+      </div>
+
     </div>
     <div class="form-group">
       <%= f.label :description, class: 'control-label' %>
