--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -42,6 +42,12 @@
       </article>
     </div>
   </div>
+  <div class="row spaced">
+    <div class="col-xs-12">
+      <h3>Incident Location</h3>
+      <hr>
+    </div>
+  </div>
   <div class="row">
     <div class="col-xs-12">
       <section class="map" id="map">
@@ -52,9 +58,25 @@
   <div class="row">
     <div class="col-xs-12">
       <span class="text-muted">Latitude:&nbsp;</span>
-        <span><%= @incident.location.latitude %></span>
+      <span><%= @incident.location.latitude %></span>
       <span class="text-muted">Longitude:&nbsp;</span>
       <span><%= @incident.location.longitude %></span>
     </div>
   </div>
 </div>
+<script type="application/javascript">
+$(document).ready(function (){
+  generateMap([
+    {
+      "lat": <%=@incident.location.latitude%>,
+      "lng": <%=@incident.location.longitude%>,
+      "picture": {
+        "url": "/assets/firemarker.png",
+        "width":  32,
+        "height": 32,
+      },
+      "infowindow": "<%=@incident.incident_type.name%>"
+    }
+  ])
+});
+</script>
