--- a/app/assets/stylesheets/core/main.scss
+++ b/app/assets/stylesheets/core/main.scss
@@ -1,7 +1,6 @@
-@import 'https://fonts.googleapis.com/css?family=Open+Sans';
-
+@import 'https://fonts.googleapis.com/css?family=Lato:400,900';
 body {
-  font-family: 'Open Sans'
+  font-family: 'Lato', sans-serif;
 }
 
 .spaced {
