Migrate back to bootstrap 3.3.6 and add Lumen Theme

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,7 @@
+@import "bootstrap-sprockets";
+@import "lumen/variables";
 @import "bootstrap";
+@import "lumen/styles";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "core/progress-bar";
