--- a/app/views/incident_types/index.html.erb
+++ b/app/views/incident_types/index.html.erb
@@ -1,23 +1,23 @@
 <div class="container spaced">
   <div class="row">
-    <div class="col-xs-12">
-      <div class="pull-xs-right">
+    <div class="col-sm-12">
+      <div class="pull-right">
         <%= link_to icon('plus', 'New Incident Type', class: 'fa-fw'), new_incident_type_path %>
       </div>
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-sm-12">
       <%= render 'layouts/notice', notice: notice %>
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12">
-      <h1 class="text-xs-center">Listing Incident Types</h1>
+    <div class="col-sm-12">
+      <h1 class="text-center">Listing Incident Types</h1>
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-sm-12">
 
       <table class="table">
         <thead>
