--- a/app/assets/stylesheets/core/navbar.scss
+++ b/app/assets/stylesheets/core/navbar.scss
@@ -1,6 +1,3 @@
-.dropdown-item {
-  font-size: 0.834rem
-}
-.nav.navbar-nav.pull-xs-right .nav-link:last-child {
-  margin-right: 1.4rem;
+.navbar-brand img {
+  margin-top: -7px;
 }
