--- a/app/views/incident_types/_form.html.erb
+++ b/app/views/incident_types/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-12 col-md-4 col-md-offset-4">
+  <div class="col-sm-12 col-md-4 col-md-offset-4">
     <%= form_for(@incident_type) do |f| %>
     <% if @incident_type.errors.any? %>
     <div id="error_explanation">
