--- a/app/views/incident_types/edit.html.erb
+++ b/app/views/incident_types/edit.html.erb
@@ -1,14 +1,14 @@
 <div class="container spaced">
-  <div class="row col-xs-12">
-    <div class="pull-xs-left">
+  <div class="row col-sm-12">
+    <div class="pull-left">
       <%= link_to icon('chevron-left', 'Back', class: 'fa-fw'), incident_types_path %>
     </div>
-    <div class="pull-xs-right">
+    <div class="pull-right">
       <%= link_to 'Show', @incident_type %>
     </div>
   </div>
-  <div class="row col-xs-12">
-  <h1 class="text-xs-center">Editing Incident Type</h1>
+  <div class="row col-sm-12">
+  <h1 class="text-center">Editing Incident Type</h1>
   </div>
   <%= render 'form' %>
 </div>
