--- a/app/views/incidents/_form.html.erb
+++ b/app/views/incidents/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-12 col-md-8 col-md-offset-2">
+  <div class="col-sm-12 col-md-8 col-md-offset-2">
     <%= form_for(@incident) do |f| %>
     <% if @incident.errors.any? %>
     <div id="error_explanation">
@@ -24,10 +24,10 @@
     <div class="form-group">
       <%= f.label :location, class: 'control-label' %>
       <div class="row">
-        <div class="col-xs-12 col-md-6">
+        <div class="col-sm-12 col-md-6">
           <%= text_field_tag :latitude, @incident.location ? @incident.location.latitude : "", class: 'form-control', placeholder: 'Latitude' %>
         </div>
-        <div class="col-xs-12 col-md-6">
+        <div class="col-sm-12 col-md-6">
           <%= text_field_tag :longitude, @incident.location ? @incident.location.longitude : "" ,class: 'form-control', placeholder: 'Longitude' %>
         </div>
       </div>
