--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -1,19 +1,19 @@
 <div class="container spaced">
   <div class="row">
-    <div class="col-xs-12">
-      <div class="pull-xs-left">
+    <div class="col-sm-12">
+      <div class="pull-left">
       <%= link_to icon('chevron-left', 'Back', class: 'fa-fw'), incidents_path %>
       </div>
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-sm-12">
       <%= render 'layouts/notice', notice: notice %>
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12">
-      <h1 class="text-xs-center">Report Incident</h1>
+    <div class="col-sm-12">
+      <h1 class="text-center">Report Incident</h1>
     </div>
   </div>
   <%= render 'form' %>
