Implement Kaminari Pager with Nobrainer support

--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -57,4 +57,9 @@
       <% end %>
     </div>
   </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <%= paginate @incidents %>
+    </div>
+  </div>
 </div>
