--- a/app/views/incident_types/index.html.erb
+++ b/app/views/incident_types/index.html.erb
@@ -18,7 +18,6 @@
   </div>
   <div class="row">
     <div class="col-sm-12">
-
       <table class="table">
         <thead>
           <tr>
@@ -38,6 +37,11 @@
           <% end %>
         </tbody>
       </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <%= paginate @incident_types %>
     </div>
   </div>
 </div>
