--- a/app/views/incident_types/index.html.erb
+++ b/app/views/incident_types/index.html.erb
@@ -18,25 +18,27 @@
   </div>
   <div class="row">
     <div class="col-sm-12">
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th colspan="3"></th>
-          </tr>
-        </thead>
+      <div class="table-responsive">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
 
-        <tbody>
-          <% @incident_types.each do |incident_type| %>
-          <tr>
-            <td><%= incident_type.name %></td>
-            <td><%= link_to icon('eye'), incident_type %></td>
-            <td><%= link_to icon('pencil'), edit_incident_type_path(incident_type) %></td>
-            <td><%= link_to icon('times'), incident_type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
+          <tbody>
+            <% @incident_types.each do |incident_type| %>
+            <tr>
+              <td><%= incident_type.name %></td>
+              <td><%= link_to icon('eye'), incident_type, class: 'text-info' %></td>
+              <td><%= link_to icon('pencil'), edit_incident_type_path(incident_type), class: 'text-muted' %></td>
+              <td><%= link_to icon('times'), incident_type, method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
   <div class="row">
