--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -8,7 +8,7 @@
   </div>
   <div class="row">
     <div class="col-sm-12">
-        <%= render 'layouts/notice', notice: notice %>
+      <%= render 'layouts/notice', notice: notice %>
     </div>
   </div>
   <div class="row">
@@ -21,39 +21,41 @@
       <% if @incidents.empty? %>
       <p class="lead text-muted text-center">No incidents yet reported.</p>
       <% else %>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Type</th>
-            <th>Action Taken</th>
-            <th>Location</th>
-            <th>Reporter</th>
-            <th>Open ?</th>
-            <th colspan="3"></th>
-          </tr>
-        </thead>
+      <div class="table-responsive">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>Type</th>
+              <th>Action Taken</th>
+              <th>Location</th>
+              <th>Reporter</th>
+              <th>Open ?</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
 
-        <tbody>
-          <% @incidents.each do |incident| %>
-          <tr>
-            <td><%= incident.incident_type.name %></td>
-            <td><%= incident.action_taken %></td>
-            <td><%= incident.location.latitude.to_s.concat(', ').concat(incident.location.longitude.to_s) %></td>
-            <td><%= incident.user.name %></td>
-            <td>
-              <% if incident.open %>
-              <%= icon('check', '', class: 'text-success') %>
-              <% else %>
-              <%= icon('times','', class: 'text-danger') %>
-              <% end %>
-            </td>
-              <td><%= link_to icon('eye'), incident %></td>
-              <td><%= link_to icon('pencil'), edit_incident_path(incident) %></td>
-              <td><%= link_to icon('times'), incident, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <tbody>
+            <% @incidents.each do |incident| %>
+            <tr>
+              <td><%= incident.incident_type.name %></td>
+              <td><%= incident.action_taken %></td>
+              <td><%= incident.location.latitude.to_s.concat(', ').concat(incident.location.longitude.to_s) %></td>
+              <td><%= incident.user.name %></td>
+              <td>
+                <% if incident.open %>
+                <%= icon('check', '', class: 'text-success') %>
+                <% else %>
+                <%= icon('times','', class: 'text-danger') %>
+                <% end %>
+              </td>
+              <td><%= link_to icon('eye'), incident, class: 'text-info' %></td>
+              <td><%= link_to icon('pencil'), edit_incident_path(incident), class: 'text-muted' %></td>
+              <td><%= link_to icon('times'), incident, method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' %></td>
             </tr>
             <% end %>
           </tbody>
         </table>
+      </div>
       <% end %>
     </div>
   </div>
