--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div class="row clearfix">
-    <div class="col-md-8">
+    <div class="col-md-8 col-sm-12">
       <h1 class="text-center">Incident</h1>
       <div class="row clearfix">
         <div class="col-md-12">
@@ -40,7 +40,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4 details-section">
+    <div class="col-md-4 col-sm-12 details-section">
       <div class="row">
         <div class="col-md-12">
           <p class="text-muted">Type:</p>
@@ -78,7 +78,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <p class="text-muted">Location:</p>
+          <p class="text-muted">Coordinates:</p>
           <p>
             <span class="text-muted">Latitude:&nbsp;</span><%= @incident.location.latitude %>
             <br>
