--- a/app/views/fires/new.html.erb
+++ b/app/views/fires/new.html.erb
@@ -1,5 +1,17 @@
-<h1>New Fire</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', fires_path %>
+<div class="container spaced">
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="pull-left"><%= link_to icon('chevron-left','Back', class: 'fa-fw'), fires_path %></div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <h1 class="text-center">Reporting a fire</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <%= render 'form' %>
+    </div>
+  </div>
+</div>
