--- a/app/views/fires/index.html.erb
+++ b/app/views/fires/index.html.erb
@@ -1,31 +1,53 @@
-<p id="notice"><%= notice %></p>
+<div class="container spaced">
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="pull-right">
+        <%= link_to icon('plus','Report new fire', class: 'fa-fw'), new_fire_path %>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <h1 class="text-center">Reported Fires</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <p id="notice"><%= notice %></p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="table-responsive">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Location</th>
+              <th>Reporter</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
 
-<h1>Listing Fires</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Original area</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @fires.each do |fire| %>
-      <tr>
-        <td><%= fire.name %></td>
-        <td><%= fire.original_area %></td>
-        <td><%= fire.description %></td>
-        <td><%= link_to 'Show', fire %></td>
-        <td><%= link_to 'Edit', edit_fire_path(fire) %></td>
-        <td><%= link_to 'Destroy', fire, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<%= paginate @fires %>
-<br>
-
-<%= link_to 'New Fire', new_fire_path %>
+          <tbody>
+            <% @fires.each do |fire| %>
+            <tr>
+              <td><%= fire.name %></td>
+              <td><%= fire.location.latitude.to_s.concat(', ').concat(fire.location.longitude.to_s) %></td>
+              <td><%= fire.user.name %></td>
+              <td><%= link_to icon('eye'), fire, class: 'text-info' %></td>
+              <td><%= link_to icon('pencil'), edit_fire_path(fire), class: 'text-muted' %></td>
+              <td><%= link_to icon('times'), fire, method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <%= paginate @fires %>
+    </div>
+  </div>
+</div>
