--- a/app/views/fires/show.html.erb
+++ b/app/views/fires/show.html.erb
@@ -1,19 +1,96 @@
-<p id="notice"><%= notice %></p>
+<div class="container spaced">
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="pull-left">
+        <%= link_to icon('chevron-left', 'Back', class: 'fa-fw'), fires_path %>
+      </div>
+      <div class="pull-right">
 
-<p>
-  <strong>Name:</strong>
-  <%= @fire.name %>
-</p>
-
-<p>
-  <strong>Original area:</strong>
-  <%= @fire.location %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @fire.description %>
-</p>
-
-<%= link_to 'Edit', edit_fire_path(@fire) %> |
-<%= link_to 'Back', fires_path %>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <%= render 'layouts/notice', notice: notice %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-8">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="text-center">Report</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h4 class="text-muted">
+            <%= @fire.name %>
+          </h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 spaced">
+          <p class="text-justified">
+            <%= @fire.description %>
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 spaced">
+          <section class="map" id="map"></section>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="row">
+        <div class="col-md-12">
+          <p class="text-muted">Occurred at:</p>
+          <p><%= date_time @fire.created_at %></p>
+          <hr>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p class="text-muted">Reporter:</p>
+          <p>
+            <span><%= image_tag gravatar(@fire.user.email, 25), height: 25, class: ['img-circle'] %></span>
+            &nbsp; <%= mail_to @fire.user.email, @fire.user.name %>
+          </p>
+          <hr>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p class="text-muted">Coordinates:</p>
+          <p>
+            <span class="text-muted">Latitude:&nbsp;</span><%= @fire.location.latitude %>
+            <br>
+            <span class="text-muted">Longitude:&nbsp;</span><%= @fire.location.longitude %>
+          </p>
+          <hr>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <%= link_to icon('pencil', 'Edit this report', class: 'fa-fw'), edit_fire_path(@fire), class: 'text-icon' %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<script type="application/javascript">
+$(document).ready(function (){
+  generateMap([
+    {
+      "lat": <%=@fire.location.latitude%>,
+      "lng": <%=@fire.location.longitude%>,
+      "picture": {
+        "url": "/assets/firemarker.png",
+        "width":  32,
+        "height": 32,
+      },
+      "infowindow": "<%=@fire.name%>"
+    }
+  ])
+});
+</script>
