Add date time format to incident list at incident types show

--- a/app/views/incident_types/show.html.erb
+++ b/app/views/incident_types/show.html.erb
@@ -41,7 +41,7 @@
           <tbody>
             <% @incident_type.incidents.each do |incident| %>
             <tr>
-              <td><%= incident.created_at %></td>
+              <td><%= date_time incident.created_at %></td>
               <td><%= incident.action_taken %></td>
               <td><%= incident.location %></td>
               <td>
